--- a/atv04/style.css
+++ b/atv04/style.css
@@ -5,6 +5,8 @@ body {
   }
   
   header {
+    position: fixed;
+    width: 100%;
     background-color: #333;
     color: white;
     padding: 20px;
@@ -17,7 +19,7 @@ body {
   main {
     max-width: 800px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 100px;
   }
   
   img {
